[SR-11992] Check for unused properties in closures