lib/Sema/MiscDiagnostics.h
@@ -44,6 +44,9 @@ void performAbstractFuncDeclDiagnostics(AbstractFunctionDecl *AFD);
 
 /// Perform diagnostics on the top level code declaration.
 void performTopLevelDeclDiagnostics(TopLevelCodeDecl *TLCD);
+
+/// Perform diagnostics on closure body.
+void performClosureBodyDiagnostics(ClosureExpr *closure);
   
 /// Emit a fix-it to set the access of \p VD to \p desiredAccess.
 ///
