lib/Sema/TypeCheckStmt.cpp
@@ -2087,6 +2087,10 @@ bool TypeChecker::typeCheckClosureBody(ClosureExpr *closure) {
     closure->setBody(body, closure->hasSingleExpressionBody());
   }
   closure->setBodyState(ClosureExpr::BodyState::SeparatelyTypeChecked);
+  
+  if (!HadError)
+    performClosureBodyDiagnostics(closure);
+  
   return HadError;
 }
 
